# carddown

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md  package-lock.json
.github/workflows/: ci.yml  release.yml  rust.yml
doc/: ALGORITHMS.md  GUIDE.md  demo.tape
src/: card.rs  config.rs  db.rs  main.rs  sm2.rs  sm5.rs  tui.rs  vault.rs
src/algorithm/: mod.rs  simple8.rs  sm2.rs  sm5.rs
src/view/: audit.rs  formatting.rs  mod.rs  revise.rs
tests/: integration.rs  test.md
tests/fixtures/: ignored.md  multi_line.md  single_line.md
