[package]
name = "carddown"
version = "0.1.6"
edition = "2021"
authors = ["Martin Trojer <martin.trojer@gmail.com>"]
license = "MIT"
description = "A simple cli tool to keep track of (and study) flashcards in text files"
readme = "README.md"
homepage = "https://github.com/martintrojer/carddown"
repository = "https://github.com/martintrojer/carddown"
keywords = ["flashcards", "study", "learning", "memorization", "spaced-repetition"]
categories = ["education", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
blake3 = { version = "1.5.1", features = ["serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
crossterm = "0.27.0"
env_logger = "0.11.3"
lazy_static = "1.4.0"
log = "0.4.21"
ordered-float = { version = "4.2.0", features = ["serde"] }
rand = "0.8.5"
ratatui = "0.26.2"
regex = "1.10.4"
ron = "0.8.1"
serde = { version = "1.0.198", features = ["derive"] }
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.10.1"
