[package]
name = "carddown"
version = "0.1.10"
edition = "2021"
authors = ["Martin Trojer <martin.trojer@gmail.com>"]
license = "MIT"
description = "A simple cli tool to keep track of (and study) flashcards in text files"
readme = "README.md"
homepage = "https://github.com/martintrojer/carddown"
repository = "https://github.com/martintrojer/carddown"
keywords = [
  "flashcards",
  "study",
  "learning",
  "memorization",
  "spaced-repetition",
]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
blake3 = { version = "1.8.2", features = ["serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.43", features = ["derive"] }
crossterm = "0.29.0"
env_logger = "0.11.8"
log = "0.4.27"
ordered-float = { version = "5.0.0", features = ["serde"] }
rand = "0.9.2"
ratatui = "0.29.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.20.0"
