[package]
name = "carddown"
version = "0.4.0"
edition = "2021"
authors = ["Martin Trojer <martin.trojer@gmail.com>"]
license = "MIT"
description = "A simple cli tool to keep track of (and study) flashcards in text files"
readme = "README.md"
homepage = "https://github.com/martintrojer/carddown"
repository = "https://github.com/martintrojer/carddown"
keywords = [
  "flashcards",
  "study",
  "learning",
  "memorization",
  "spaced-repetition",
]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
blake3 = { version = "1.8.3", features = ["serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive"] }
crossterm = "0.29.0"
env_logger = "0.11.9"
log = "0.4.29"
ordered-float = { version = "5.1.0", features = ["serde"] }
rand = "0.9.2"
ratatui = "0.29.0"
regex = "1.12.3"
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.27.0"
